# cleanmydata

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  BASELINE.md  CHANGELOG.md  Dockerfile  PLAN_ASSESSMENT.md  README.md  TODO.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt  tox.ini
.cursor/plans/: cleanmydata.plan.md  cleanmydata_de934e80.plan.md  hackathon_pivot_plan.plan.md  hackathon_pivot_plan_f803ec36.plan.md
.cursor/rules/: ci-pr-workflow.mdc
.github/workflows/: ci.yml
cleanmydata/: __init__.py  __main__.py  api.py  clean.py  cli.py  cli_config.py  cli_ui.py  config.py  constants.py  context.py  exceptions.py  logging.py  metrics.py  models.py  recipes.py
cleanmydata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cleanmydata/ai/: __init__.py  gemini.py  prompts.py
cleanmydata/cleaning/: __init__.py  pipeline.py
cleanmydata/utils/: __init__.py  io.py  logging.py  profiling.py  storage.py
cleanmydata/validation/: __init__.py  schema.py
docs/: architecture.md  cli.md  config.md  contributing.md  datadog_metrics_cloudrun.md  extending.md  formats.md  install.md  quickstart.md
docs/architecture/: flow.md  overview.md
docs/datadog/: dashboard_cleanmydata.json
src/: clean.py  new_funcs.py  utils.py
tests/: __init__.py  test_api.py  test_clean_pipeline_validation.py  test_cli.py  test_cli_config.py  test_config.py  test_context.py  test_exceptions.py  test_gemini.py  test_io.py  test_logging.py  test_metrics.py  test_models.py  test_profiling.py  test_public_api.py  test_recipes.py  test_smoke.py  test_storage.py  test_validation.py
tests/fixtures/: small.csv
