[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanmydata"
version = "0.1.0"
description = "A data cleaning library + CLI for automated cleaning of messy datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohannad Basyouni" }]
keywords = ["data-cleaning", "data-processing", "pandas", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Minimal library core: CSV works with core install.
dependencies = [
  "pandas>=2.0.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
# API server dependencies
api = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.6",
  "ddtrace>=2.0.0",
  "httpx>=0.24.0",
]

# GCS storage
gcs = [
  "google-cloud-storage>=2.18.0",
]

# AI (Gemini) dependencies
ai = [
  "google-cloud-aiplatform>=1.71.1",
]

# CLI UX only.
cli = [
  "rich>=14.0.0",
  "typer>=0.9.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
]

# Excel engine only (used by read/write for xlsx/xlsm).
excel = [
  "openpyxl>=3.1.0",
]

# Parquet engine for read/write of .parquet files.
parquet = [
  "pyarrow>=10.0.0",
]

test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "PyYAML>=6.0.0",
  "pydantic>=2.0.0",
  "pandera>=0.18.0",
  "mypy>=1.7.0",
]

dev = [
  "pre-commit>=3.0.0",
  "mypy>=1.7.0",
  "tox>=4.0.0",
]

# Schema validation extra
schema = [
  "pandera>=0.18.0",
]

# "all" must be literal union (no nested extras references).
all = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.6",
  "ddtrace>=2.0.0",
  "google-cloud-storage>=2.18.0",
  "rich>=14.0.0",
  "typer>=0.9.0",
  "openpyxl>=3.1.0",
  "pyarrow>=10.0.0",
  "google-cloud-aiplatform>=1.71.1",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pandera>=0.18.0",
  "pre-commit>=3.0.0",
  "mypy>=1.7.0",
  "tox>=4.0.0",
]

[project.scripts]
cleanmydata = "cleanmydata.cli:app"

[tool.setuptools]
packages = ["cleanmydata"]

[tool.setuptools.package-data]
cleanmydata = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
  "E501",  # handled by formatter
  "B008",  # allow calls in defaults where intentionally used
  "B905",  # lenient zip for data cleaning
]

[tool.ruff.lint.isort]
known-first-party = ["cleanmydata"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
# Phase 5.2: relaxed typing baseline to get mypy running in CI without blocking.
python_version = "3.10"
warn_unused_configs = true
show_error_codes = true
pretty = true

# Relaxed defaults (prefer config over code churn for now).
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false

# Avoid failing on optional deps / missing stubs at this stage.
ignore_missing_imports = true

# Keep CI green while we ratchet typing over time (prefer config over refactors).
disable_error_code = ["arg-type", "assignment", "index", "dict-item", "import-untyped"]

# Keep tests out of the initial typing surface area.
exclude = "(^tests/|/tests/)"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
